--- a/www.nass.gov.ng/43b179ad17c029abb1ff1817c07e9fd8978be464.yml
+++ b/www.nass.gov.ng/43b179ad17c029abb1ff1817c07e9fd8978be464.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 07:09:07 GMT
+    - Sun, 25 Jun 2017 15:05:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zDv1Hrbhkw9jKsV9xTjqS2; path=/
+    - PHPSESSID=5uaRg2JfXq5%2CssdoImPjS2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 07:09:07 GMT
+recorded_at: Sun, 25 Jun 2017 15:05:42 GMT
