--- a/www.nass.gov.ng/ebdca9a05397ebe8661483010fc72c2e0204b246.yml
+++ b/www.nass.gov.ng/ebdca9a05397ebe8661483010fc72c2e0204b246.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 07:16:52 GMT
+    - Sun, 25 Jun 2017 15:13:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tjM4znmOdKIko3ic8FUan1; path=/
+    - PHPSESSID=LxEkCW%2CY-pEsmFHPCXRS52; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 07:16:52 GMT
+recorded_at: Sun, 25 Jun 2017 15:13:26 GMT
