--- a/www.nass.gov.ng/cae08c3dba331e203e695cea9c89942a46df3731.yml
+++ b/www.nass.gov.ng/cae08c3dba331e203e695cea9c89942a46df3731.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 07:19:28 GMT
+    - Sun, 25 Jun 2017 15:16:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=74QCa83Ymi5p%2C7Bzdx-723; path=/
+    - PHPSESSID=HlIu0Ioz5J3Za-xPyv9au2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 07:19:28 GMT
+recorded_at: Sun, 25 Jun 2017 15:16:26 GMT
