--- a/www.nass.gov.ng/697c3f16e70741cd7bafa69343da34bc1584bab1.yml
+++ b/www.nass.gov.ng/697c3f16e70741cd7bafa69343da34bc1584bab1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 07:26:27 GMT
+    - Sun, 25 Jun 2017 15:21:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GZY0PhlQ7F4rVzBOhu1pK3; path=/
+    - PHPSESSID=kiWuB1sRc968%2CvJKPkGDV3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 07:26:27 GMT
+recorded_at: Sun, 25 Jun 2017 15:21:49 GMT
