--- a/www.nass.gov.ng/3184ac4a329fcdcc4b586b278da87ad06d3dfae1.yml
+++ b/www.nass.gov.ng/3184ac4a329fcdcc4b586b278da87ad06d3dfae1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 07:33:03 GMT
+    - Sun, 25 Jun 2017 15:28:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5NXKVx-zMjNU%2C%2Cu6Y97781; path=/
+    - PHPSESSID=gCycHfy59Y7Ipx3tbB1K20; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 07:33:03 GMT
+recorded_at: Sun, 25 Jun 2017 15:28:21 GMT
