--- a/www.nass.gov.ng/9adc49d36b938c5d8890be9680ab3d62c71bf5dd.yml
+++ b/www.nass.gov.ng/9adc49d36b938c5d8890be9680ab3d62c71bf5dd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 07:35:50 GMT
+    - Sun, 25 Jun 2017 15:31:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=533JBYZJDRSls0L5WV5MC0; path=/
+    - PHPSESSID=v7YMxCraOH7Z-t8Sdiga%2C1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 07:35:50 GMT
+recorded_at: Sun, 25 Jun 2017 15:31:03 GMT
