--- a/www.nass.gov.ng/9d72cdb971135abeff1fd76f9afd94b45f62b734.yml
+++ b/www.nass.gov.ng/9d72cdb971135abeff1fd76f9afd94b45f62b734.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 07:38:43 GMT
+    - Sun, 25 Jun 2017 15:33:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BW2K9gr28wQj3TaSe60NM3; path=/
+    - PHPSESSID=EpvUp%2CRou%2C5RrBkTEX2xv3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 07:38:43 GMT
+recorded_at: Sun, 25 Jun 2017 15:33:08 GMT
