--- a/www.nass.gov.ng/76593837644a84e097fbfc23267bf9061e8f9e26.yml
+++ b/www.nass.gov.ng/76593837644a84e097fbfc23267bf9061e8f9e26.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Jun 2017 10:50:21 GMT
+    - Mon, 26 Jun 2017 17:48:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uF76AG%2C5G%2CARPZ0OUXSBz0; path=/
+    - PHPSESSID=NgOej95ZAFT3AWaxJWdXw1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Jun 2017 10:50:21 GMT
+recorded_at: Mon, 26 Jun 2017 17:48:10 GMT
