--- a/www.nass.gov.ng/e55b187e09f0d9edf01c420e25e40baf4725b5ac.yml
+++ b/www.nass.gov.ng/e55b187e09f0d9edf01c420e25e40baf4725b5ac.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Jun 2017 10:53:00 GMT
+    - Mon, 26 Jun 2017 17:51:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=M3pPDCV5x3yV%2CVRiPVeTl0; path=/
+    - PHPSESSID=RGLlfk54rZFCxdsLcjND71; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Jun 2017 10:53:00 GMT
+recorded_at: Mon, 26 Jun 2017 17:51:06 GMT
