--- a/www.nass.gov.ng/d1c2a11ed1584625bda91a2743f6d0c5ccfc0902.yml
+++ b/www.nass.gov.ng/d1c2a11ed1584625bda91a2743f6d0c5ccfc0902.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 12:43:48 GMT
+    - Tue, 20 Mar 2018 22:09:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CmuzIskxCcsKLWaGI6i1h1; path=/
+    - PHPSESSID=Ss2hJmb%2CV50C5DZByMm7Z1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 12:43:48 GMT
+recorded_at: Tue, 20 Mar 2018 22:09:58 GMT
