--- a/www.nass.gov.ng/f5a3b102f1d664c0c113132ccc008b86ada59b7f.yml
+++ b/www.nass.gov.ng/f5a3b102f1d664c0c113132ccc008b86ada59b7f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 12:52:29 GMT
+    - Tue, 20 Mar 2018 22:19:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UK%2CFJxkg7-rtKYK%2CtZ6NT0; path=/
+    - PHPSESSID=M9gD-3rxgO87gL1m44Nc83; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 12:52:29 GMT
+recorded_at: Tue, 20 Mar 2018 22:19:23 GMT
