--- a/www.nass.gov.ng/88e5f4d49e2997901adef39797f3a2d567c7fb80.yml
+++ b/www.nass.gov.ng/88e5f4d49e2997901adef39797f3a2d567c7fb80.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 12:55:29 GMT
+    - Tue, 20 Mar 2018 22:23:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CFfkGguUA3H6CC%2C9qmsJI3; path=/
+    - PHPSESSID=e53hL23LOg9e3fTR5qz4F0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 12:55:30 GMT
+recorded_at: Tue, 20 Mar 2018 22:23:02 GMT
