--- a/www.nass.gov.ng/d262b3f4a2b1dd6ad8b77c58ff613a3e529c76d4.yml
+++ b/www.nass.gov.ng/d262b3f4a2b1dd6ad8b77c58ff613a3e529c76d4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 13:03:28 GMT
+    - Tue, 20 Mar 2018 22:33:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vBSXbMpDj0%2CS%2CFil7ksa00; path=/
+    - PHPSESSID=TAIqSs3iaTEemRxmb5Y6i1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 13:03:28 GMT
+recorded_at: Tue, 20 Mar 2018 22:33:42 GMT
