--- a/www.nass.gov.ng/b6e10f2ae6b49d52dd64ca9d508600fd7dab7211.yml
+++ b/www.nass.gov.ng/b6e10f2ae6b49d52dd64ca9d508600fd7dab7211.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 13:05:18 GMT
+    - Tue, 20 Mar 2018 22:35:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HdflIAMFClD7DDQnu-OyS0; path=/
+    - PHPSESSID=aIibA0t0%2CcI2MwxjRjwrl1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 13:05:19 GMT
+recorded_at: Tue, 20 Mar 2018 22:35:54 GMT
