--- a/www.nass.gov.ng/3edfd5b5d6e79ec5f465da328be0dbc418f3ec36.yml
+++ b/www.nass.gov.ng/3edfd5b5d6e79ec5f465da328be0dbc418f3ec36.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 13:15:27 GMT
+    - Tue, 20 Mar 2018 22:45:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=K%2CdFHkfwyIprtZwtDGFn90; path=/
+    - PHPSESSID=niCQjxR8CE5a3dA-56TLT3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 13:15:27 GMT
+recorded_at: Tue, 20 Mar 2018 22:45:34 GMT
