--- a/www.nass.gov.ng/9e13a5401a9741ec5c17edcf74074efe15cff943.yml
+++ b/www.nass.gov.ng/9e13a5401a9741ec5c17edcf74074efe15cff943.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 13:20:39 GMT
+    - Tue, 20 Mar 2018 22:50:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Zvl%2Cq9malkeC6jXb9m%2CRk2; path=/
+    - PHPSESSID=12%2CIhx6MaDpA4dsypuUHV1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 13:20:39 GMT
+recorded_at: Tue, 20 Mar 2018 22:50:53 GMT
