--- a/www.nass.gov.ng/9e209ae9811fb6cd3ce7d65ecc3bddc4aa65cb75.yml
+++ b/www.nass.gov.ng/9e209ae9811fb6cd3ce7d65ecc3bddc4aa65cb75.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 13:25:48 GMT
+    - Tue, 20 Mar 2018 22:55:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ejq8GV0%2CcXKpzDNJ%2CQO5e3; path=/
+    - PHPSESSID=rkQLaVaueixmsR6j-os-D0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 13:25:48 GMT
+recorded_at: Tue, 20 Mar 2018 22:55:42 GMT
