--- a/www.nass.gov.ng/fb147f01bf26aa8506e7afdf771f4521616d257f.yml
+++ b/www.nass.gov.ng/fb147f01bf26aa8506e7afdf771f4521616d257f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 13:28:38 GMT
+    - Tue, 20 Mar 2018 22:58:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ywIR5cXZ8xjIo%2CqXVDe8Z1; path=/
+    - PHPSESSID=Fm1N8DshnUO1nzZTaFTH61; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 13:28:38 GMT
+recorded_at: Tue, 20 Mar 2018 22:58:06 GMT
