--- a/www.nass.gov.ng/ecaeb1c0a4881e8724d62b7d9dc85139fb441f6b.yml
+++ b/www.nass.gov.ng/ecaeb1c0a4881e8724d62b7d9dc85139fb441f6b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 13:30:14 GMT
+    - Tue, 20 Mar 2018 23:00:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aZFXkbfu2KvlWF938iPUc2; path=/
+    - PHPSESSID=1KD%2CRUykq5vcaSc674wpY1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 13:30:14 GMT
+recorded_at: Tue, 20 Mar 2018 23:00:40 GMT
