--- a/www.nass.gov.ng/90c4d05075d2be6f74f7e7fb23eb9d77f3096e2b.yml
+++ b/www.nass.gov.ng/90c4d05075d2be6f74f7e7fb23eb9d77f3096e2b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 13:45:05 GMT
+    - Tue, 20 Mar 2018 23:17:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Hhr74%2CNmTQWxtXPz3sxKm1; path=/
+    - PHPSESSID=e1DWrsU2VIJ9jIiPbVzB43; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 13:45:05 GMT
+recorded_at: Tue, 20 Mar 2018 23:17:29 GMT
