--- a/www.nass.gov.ng/76fa4fedda2c4d9d58ecbe956c92e6b01f09e5d2.yml
+++ b/www.nass.gov.ng/76fa4fedda2c4d9d58ecbe956c92e6b01f09e5d2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 13:48:13 GMT
+    - Tue, 20 Mar 2018 23:21:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Okci9wdilSUb0qoBAs1tG0; path=/
+    - PHPSESSID=ruDe-%2CPkqQnJ1lEmJkTW%2C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 13:48:13 GMT
+recorded_at: Tue, 20 Mar 2018 23:21:57 GMT
