--- a/www.nass.gov.ng/3a924a576f9978694651feaca9f908e3d2100ff5.yml
+++ b/www.nass.gov.ng/3a924a576f9978694651feaca9f908e3d2100ff5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 13:50:22 GMT
+    - Tue, 20 Mar 2018 23:24:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jnMRji9OEvs9GnK%2CQsdjU0; path=/
+    - PHPSESSID=v3qvqgTI5zXwwZ3lK8M7x2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 13:50:23 GMT
+recorded_at: Tue, 20 Mar 2018 23:24:12 GMT
