--- a/www.nass.gov.ng/f8d1624d110106d6caae417f6a632ae22d9b2492.yml
+++ b/www.nass.gov.ng/f8d1624d110106d6caae417f6a632ae22d9b2492.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 13:50:40 GMT
+    - Tue, 20 Mar 2018 23:25:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xq8uwyNynmodhiWDS03DR3; path=/
+    - PHPSESSID=mr1neJi%2C6q1fZ2pOTHHcy3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 13:50:40 GMT
+recorded_at: Tue, 20 Mar 2018 23:25:17 GMT
