--- a/www.nass.gov.ng/b7baa2f9c92f241abb1abf301a0f2b371166db7d.yml
+++ b/www.nass.gov.ng/b7baa2f9c92f241abb1abf301a0f2b371166db7d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 13:59:00 GMT
+    - Tue, 20 Mar 2018 23:32:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CvI3BCWGuq64Z9v77HONb1; path=/
+    - PHPSESSID=qqwxIaTu5sPcqnaaKO1i13; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 13:59:00 GMT
+recorded_at: Tue, 20 Mar 2018 23:32:20 GMT
